# remote-butler

./: .dockerignore  .gitignore  Dockerfile  main.py  prompt.gbnf  pyproject.toml  start.sh
.github/workflows/: docker-image.yml
